# researchFlow

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
config/: house_view.yaml  topics.yaml
config/frameworks/: us_cpi.yaml
eval/fixtures/us_cpi_2026_03/: fixture.yaml
examples/: generate_sample.py  smoke_test.py
src/researchflow/: __init__.py  flow.py  resolve.py
src/researchflow/clients/: __init__.py  house_view.py  macro_data.py  rag.py
src/researchflow/context/: __init__.py  assembler.py  contracts.py  recipe_loader.py
src/researchflow/eval/: __init__.py  __main__.py  cli.py  contracts.py  fixtures.py  harness.py  mock_client.py  runners.py  scorers.py
src/researchflow/generation/: __init__.py  contracts.py  generator.py  prompts.py  provider.py
src/researchflow/server/: __init__.py  __main__.py  auth.py  config.py  main.py  persistence.py  resources.py  routes.py  schemas.py
src/researchflow/validation/: __init__.py  contracts.py  judge.py  pipeline.py  (+1 more)
tests/clients/: test_macro_data.py  test_rag.py
tests/context/: test_assembler.py
tests/eval/: test_fixtures.py  test_harness.py  test_mock_client.py  test_scorers.py
tests/flow/: test_run_research_flow.py
tests/generation/: test_generator.py
tests/resolve/: test_topic_resolver.py
tests/server/: test_routes.py
tests/validation/: conftest.py  test_citation_integrity.py  test_house_view_reconciliation.py  test_judge.py  test_logic_consistency.py  test_numeric_grounding.py  test_pipeline.py  test_pipeline_with_judges.py  test_postprocessor.py  test_structure.py
(+21 files in other folders)
