[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchflow"
version = "0.0.1"
description = "Context build + generation + validation pipeline for sell-side research automation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"researchflow.context.recipes" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
